--- a/tunnel_vision.html
+++ b/tunnel_vision.html
@@ -12,6 +12,8 @@
                 var textBox = document.getElementById("text_box");
                 var excessText = textBox.value.length - maxText;
                 var keepText = "";
+                var totalChars = hiddenText.length + textBox.value.length;
+                document.getElementById("num_words").innerHTML = "Characters so far: " + totalChars;
                 if(excessText > 0) {
                     hiddenText += textBox.value.substring(0, excessText);
                     keepText += textBox.value.substring(excessText, textBox.value.length+10);
@@ -29,6 +31,7 @@
         </script>
         <br>
         <br>
+        <p id="num_words">Characters so far: 0 </p>
         <button onclick="revealHiddenText()">What did I write?</button>
     </body>
 </html>
