--- a/tunnel_vision.html
+++ b/tunnel_vision.html
@@ -99,7 +99,7 @@
             var refreshIntervalId = setInterval("collectInput(-1)", pollFreq);
             function revealHiddenText() {
                 collectInput(0);
-                document.write("<html><body><a href='data:text/plain;charset=utf-8," + encodeURIComponent(hiddenText) +"' target=\"_blank\" download=\"tv.txt\">Download it!!</a><p style=\"white-space:pre-wrap;\">" + hiddenText + "</p></body></html>");
+                document.write("<html><body><a href='data:text/plain;charset=utf-8," + escape(hiddenText) +"' target=\"_blank\" download=\"tv.txt\">Download it!!</a><p style=\"white-space:pre-wrap;\">" + hiddenText + "</p></body></html>");
                 document.close();
             }
         </script>
